--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -49,8 +49,8 @@
             android:layout_marginTop="6dp"
             android:text="12月9日 周四"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@id/photoCard"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/photoCard" />
 
         <TextView
             android:id="@+id/TextTitle"
