--- a/app/src/main/res/layout/activity_mix.xml
+++ b/app/src/main/res/layout/activity_mix.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
+    android:fitsSystemWindows="true"
     tools:context="com.hustunique.morii.design.MixActivity">
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/include"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,17 +25,20 @@
 
             <ImageView
                 android:id="@+id/imageView_mix_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_chevron_left_24" />
+                app:srcCompat="@drawable/ic_icon_left_design" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="返回"
+                android:layout_marginLeft="4dp"
+                android:textColor="#1D283F"
+                android:text="上一步"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imageView_mix_back"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -44,8 +48,9 @@
             android:id="@+id/textView_mix"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="组合"
-            android:textSize="24sp"
+            android:textColor="#1D283F"
+            android:text="创作"
+            android:textSize="32sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,19 +67,22 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="完成"
+                android:layout_marginRight="4dp"
+                android:textColor="#1D283F"
+                android:text="下一步"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/imageView_mix_complete"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView_mix_complete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
+                app:srcCompat="@drawable/ic_icon_right_design" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
