--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="12dp"
+    android:id="@+id/itemCard"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -15,15 +16,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        >
+        android:layout_marginBottom="12dp">
 
 
         <androidx.cardview.widget.CardView
             android:id="@+id/photoCard"
             android:layout_width="match_parent"
             android:layout_height="135dp"
-
             android:transitionName="photo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,12 +54,12 @@
             android:id="@+id/TextTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="今天的空气是橘子味的"
-            android:textSize="15sp"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/black"
-            android:textStyle="bold"
             android:layout_marginStart="9dp"
+            android:fontFamily="sans-serif"
+            android:text="今天的空气是橘子味的"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/TextDate" />
 
