--- a/app/src/main/res/layout/activity_mix_plus.xml
+++ b/app/src/main/res/layout/activity_mix_plus.xml
@@ -4,36 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@color/colorBackground"
+    android:fitsSystemWindows="false"
     tools:context="com.hustunique.morii.design.MixActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_margin="16dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView03"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include">
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintVertical_bias="1.0">
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/imageView_bacground"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/design_default_color_on_primary"
+            android:background="#80817A7A"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:round="16dp" />
+            app:layout_constraintVertical_bias="0.0"
+            app:round="20dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="9dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +78,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image9"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -92,7 +100,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image8"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -114,7 +122,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image7"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -136,7 +144,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image6"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -158,7 +166,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image5"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -181,7 +189,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image4"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -203,7 +211,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image3"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -225,7 +233,7 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image2"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
@@ -247,8 +255,8 @@
 
                         <androidx.constraintlayout.utils.widget.ImageFilterView
                             android:id="@+id/square_image1"
-                            android:layout_width="0dp"
-                            android:layout_height="134dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:paddingStart="16dp"
                             android:paddingTop="16dp"
@@ -303,7 +311,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintGuide_percent="0.66"
+                        app:layout_constraintGuide_begin="250dp"
                         app:layout_constraintStart_toStartOf="parent" />
 
                     <androidx.constraintlayout.widget.Guideline
@@ -345,35 +353,29 @@
         android:id="@+id/include"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/backLayout_mix"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:foreground="?android:attr/selectableItemBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imageView_mix_back"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_icon_left_design" />
+                app:srcCompat="@drawable/ic_baseline_chevron_left_24" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:text="上一步"
-                android:textColor="#1D283F"
-                android:textSize="16sp"
+                android:text="返回"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imageView_mix_back"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -383,9 +385,8 @@
             android:id="@+id/textView_mix"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="创作"
-            android:textColor="#1D283F"
-            android:textSize="32sp"
+            android:text="组合"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -402,135 +403,30 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
-                android:text="下一步"
-                android:textColor="#1D283F"
-                android:textSize="16sp"
+                android:text="完成"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/imageView_mix_complete"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageView_mix_complete"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_icon_right_design" />
+                app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView03"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/square11"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-
-            <ImageView
-                android:id="@+id/square12"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-
-            <ImageView
-                android:id="@+id/square32"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/square42"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-
-            <ImageView
-                android:id="@+id/square52"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-
-            <ImageView
-                android:id="@+id/square62"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/square72"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-
-            <ImageView
-                android:id="@+id/square82"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-
-            <ImageView
-                android:id="@+id/square92"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/square" />
-        </LinearLayout>
-    </LinearLayout>
->>>>>>> 089c9be (MixActivityUI refactor)
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView03"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/square2"
         app:layout_constraintBottom_toTopOf="@+id/playbackButton"
-        app:layout_constraintTop_toBottomOf="@id/gridLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
